Fix for Bug 297847 -  Performance - Use autoboxing or valueOf instead of primitive wrapper constructors
Instead of using the slow primitive wrapper constructors like new Integer(1), auto boxing or Integer.valueOf(1) are now used

Code Review By:  Denise Smith